--- a/.github/workflows/setup_matlab.yml
+++ b/.github/workflows/setup_matlab.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           products: Deep_Learning_Toolbox Statistics_and_Machine_Learning_Toolbox Parallel_Computing_Toolbox Deep_Learning_Toolbox_Model_for_GoogLeNet_Network
           release: R2024b
+          cache: true
       - name: Run tests and generate artifacts
         uses: matlab-actions/run-tests@v2
         with:
