--- a/.github/workflows/setup_matlab.yml
+++ b/.github/workflows/setup_matlab.yml
@@ -13,19 +13,24 @@ jobs:
           products: Deep_Learning_Toolbox Statistics_and_Machine_Learning_Toolbox Parallel_Computing_Toolbox Deep_Learning_Toolbox_Model_for_GoogLeNet_Network
           release: R2024b
           cache: true
-      - name: Install Xvfb
+      - name: Install XFCE and TigerVNC
         run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb
-      - name: Start Xvfb
+         sudo apt-get update
+         sudo apt-get install -y xfce4 xfce4-goodies tigervnc-standalone-server
+      - name: Set up VNC password
         run: |
-          Xvfb :99 -screen 0 1920x1080x24 &
-          export DISPLAY=:99 &
-          echo "Xvfb started on display :99"
+          mkdir -p ~/.vnc
+          echo "${{ secrets.VNC_PASSWORD }}" | vncpasswd -f > ~/.vnc/passwd
+          chmod 600 ~/.vnc/passwd
+      - name: Start VNC server
+        run: |
+          vncserver :1 -geometry 1920x1080 -depth 24
+          sleep 5
+          echo "vncserver started on display :1"
       - name: Run tests and generate artifacts
         uses: matlab-actions/run-tests@v2
         env:
-           DISPLAY: :99
+           DISPLAY: :1
         with:
           source-folder: .
           select-by-folder: tests
@@ -45,3 +50,6 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           file: code-coverage/coverage.xml
+      - name: Stop VNC server
+        if: always()
+        run: vnvserver -kill :1
